--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,40 +15,42 @@
     <main>
         <header>
             <header id="header">
-                <nav class="navbar navbar-dark bg-dark fixed-top">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                            aria-labelledby="offcanvasDarkNavbarLabel">
-                            <div class="offcanvas-header">
-                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body">
-                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="../pages/history.html">Biografía</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="../pages/art.html">Shop</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="../pages/celebrities.html">Celebridades</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="../pages/contact.html">Contacto</a>
-                                    </li>
+                <div class="overflow-hidden">
+                    <nav class="navbar navbar-dark bg-dark fixed-top">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                                aria-labelledby="offcanvasDarkNavbarLabel">
+                                <div class="offcanvas-header">
+                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="../pages/history.html">Biografía</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="../pages/art.html">Shop</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="../pages/celebrities.html">Celebridades</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="../pages/contact.html">Contacto</a>
+                                        </li>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
             </header>
     </main>
 
