--- a/pages/history.html
+++ b/pages/history.html
@@ -113,12 +113,17 @@
                         - TRACK DAY para: Ferrari, Porsche, SUPER TC 2000, Aniversario del Automovilismo, Formula E,
                         ARGENTINA.
                     </p>
+                </div>
 
-                </div>
                 <div class="col">
-                    <img class="imagenBiografia" src="../img/daniela.jpg" alt="Daniela">
-                    <img class="imagenBiografia2" src="../img/fua.jpg" alt="fua">
+                    <div class="imagenBiografia">
+                        <img src="../img/daniela.jpg" alt="Daniela">
+                    </div>
+                    <div class="imagenBiografia2">
+                        <img src="../img/fua.jpg" alt="fua">
+                    </div>
                 </div>
+
                 <div class="col">
                     <p>
                         - Realización de Obras para Subastas (con fines solidarios).
