ultima actualización contacto

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,31 +57,52 @@
     <div class="contacto" data-aos="fade-right">
         <img src="../img/contacto.jpg" alt="Contacto">
     </div>
-    <div data-aos="fade-right">
 
-    </div>
-    <section class="formulario" data-aos="fade-left">
-        <div class="contactoUno">
-            <h1>
-                ¿Necesitas ayuda?...
-            </h1>
-            <form action="enviar.php" method="POST">
-                <label class="nombre" for="name"></label>
-                <input type="text" name="name" id="name" placeholder="Name:" />
-                <label class="apellido" for="surname"></label>
-                <input type="text" name="surname" id="surname" placeholder="Surname:" />
-                <label class="email" for="email"></label>
-                <input type="email" name="email" id="email" placeholder="example@example.com:" />
-                <label class="telefono" for="phone"></label>
-                <input type="text" name="Phone" id="Phone" placeholder="Phone:" />
-                <textarea name="mensaje" placeholder="Escriba aquí su comentario..."></textarea>
-                <input class="boton" type="button" value="Enviar" />
 
-        </div>
+    <h1 class="ayuda">
+        ¿Necesitas ayuda?...
+    </h1>
+
+    <section class="danielapintando">
+
         <div>
-            <img class="danipintando" src="../img/danipintando.jpg" alt="daniela">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu nombre">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu apellido">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu teléfono">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Dirección</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Domicilio">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Enviar</button>
+              </div>
+    </div>
+        <div>
+            <img class="danipintando" src="../img/danipintando.jpg" alt="">
         </div>
+
+
     </section>
+
+
+
     <footer>
         <h3 class="redesSociales">Redes Sociales</h3>
         <a href="https://instagram.com/montesanodaniela?igshid=OGQ2MjdiOTE=" target="_blank"><img class="instagram"
