--- a/pages/history.html
+++ b/pages/history.html
@@ -62,137 +62,139 @@
 
 
     <div data-aos="fade-left">
-
-    </div>
-
-
-
-    <div class="biografia">
-
         <h1 class="suTrabajo">
             <strong>
                 Sus Trabajos
             </strong>
         </h1>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <p class="biografia2">
-                        Con su estilo caracteristico de cómics y arte pop, su estética y colores son los principales
-                        protagonistas tomando imágenes icónicas e inmortalizandolas con su arte para así contar una
-                        historia. Su
-                        trabajo
-                        es mundialmente reconocido, destacado en el ambiente "motorsport". Siendo una frecuente
-                        protagonista de
-                        grandes premios de F1, Moto GP, Rallys, entre otros.
-                    </p>
-                    <p class="biografia2">
-                        Pilotos emblemáticos a nivel mundial, como personas icónicas del ambiente, tienen sus obras.
-                        Entre
-                        ellos:
-                        Fernando Alonso, Lewis Hamilton, Sebastián Buelmi, Hijo de James Hunt, Marc Marquez,
-                        Valentino
-                        Rossi, Maverick Viñales, Teo Martín (CEO de MSI, Madrid-Piloto Rally), Instituto Ayrton
-                        Senna,
-                        Presidente
-                        de Mercedes Benz F1, Alejandro Agag (Presidente de la F1), Daniel Herrero (Ex Presidente de
-                        Toyota
-                        Argentina).
-                    </p>
-
-                    <p class="biografia2">
-                        Internacionalmente, también ha realizado acciones en vivo para:
-                    </p>
-                    <p>
-                        - Museo "Juan Manuel Fangio" (Artista Oficial del Museo), ARGENTINA.
-                    </p>
-                    <p>
-                        - MotorSport Europa "Michelin" (Gran Premio de Aragón, MOTO GP), EUROPA.
-                    </p>
-                    <p>
-                        - TRACK DAY para: Ferrari, Porsche, SUPER TC 2000, Aniversario del Automovilismo, Formula E,
-                        ARGENTINA.
-                    </p>
-                </div>
-
-                <div class="col">
-                    <div class="imagenBiografia">
-                        <img src="../img/daniela.jpg" alt="Daniela">
-                    </div>
-                </div>
-
-                <div class="col">
-                    <p>
-                        - Realización de Obras para Subastas (con fines solidarios).
-                    </p>
-
-
-                    <p>
-                        - Subasta de Obra en el YndiCar para la fundación de Mario Andretti y Sam Smith.
-                    </p>
-                    <p>
-                        - Subasta de una obra firmada por MESSI para la fundación pequeños pasos, MIAMI.
-                    </p>
-                    <p>
-                        - Aniversario 20 años de la marca "PAGANI" en "Prestige Import", MIAMI.
-                    </p>
-                    <p>
-                        - Presentación LAMBORGHINI EVO para "Prestige Import", MIAMI.
-                    </p>
-                    <p>
-                        - Homenaje de los 20 años de "GONCHI", para su HNA "NANI RODRIGUEZ" y su Fundación, URUGUAY.
-                    </p>
-                    <p>
-                        - Final MOTO GP para la marca "Yamaha", VALENCIA - ESPAÑA.
-                    </p>
-                    <p>
-                        - Homenaje al Piloto "Ayrton Senna", en representación de su Instituto "Ayrton Senna" para
-                        la F1,
-                        BRASIL.
-                    </p>
-                    <p>
-                        - MOTO GP junto a "Michelín", TERMAS DE RÍO HONDO - ARGENTINA.
-                    </p>
-                    <p>
-                        - Diseño y decoración integral para "MSI" (Motor & Sport Institute), MADRID - ESPAÑA.
-                    </p>
-                    <p>
-                        - TCR SOUTH AMERICA.
-                    </p>
-                    <p>
-                        - Obras para edificio de "MT HELMETS" (Oficinas Centrales), CARTAGENA - ESPAÑA.
-                    </p>
-                    <p>
-                        - Intervención de cascos para pilotos de MOTO 3 "DIOGO MOREIRA" 2022, VALENCIA - ESPAÑA.
-                    </p>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-
-        <strong>
     </div>
 
 
-    <footer>
-        <h3 class="redesSociales">Redes Sociales</h3>
-        <a href="https://instagram.com/montesanodaniela?igshid=OGQ2MjdiOTE=" target="_blank"><img class="instagram"
-                src="../img/instagram.jpg" alt="Instagram"></a>
-        <a href="https://twitter.com/danimontesano" target="_blank"><img class="twitter" src="../img/twitter.jpg"
-                alt="Twitter"></a>
-        <a href="https://www.youtube.com/watch?v=agytR2SXg5M" target="_blank"><img class="youtube"
-                src="../img/youtube.jpg" alt="YouTube"></a>
-        <h4 class="arriba" style="text-decoration:none"><a href="#header">ARRIBA</a></h4>
-        <div class="montesanoLogo">
-            <img class="logo" src="../img/montesanologo.jpg" alt="logo">
-        </div>
-    </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <section class="biografia">
+        <div>
+            <p>
+                Con su estilo caracteristico de cómics y arte pop, su estética y colores son los principales
+                protagonistas tomando imágenes icónicas e inmortalizandolas con su arte para así contar una
+                historia. Su
+                trabajo
+                es mundialmente reconocido, destacado en el ambiente "motorsport". Siendo una frecuente
+                protagonista de
+                grandes premios de F1, Moto GP, Rallys, entre otros.
+            </p>
+        </div>
+        <div>
+            <p>
+                Pilotos emblemáticos a nivel mundial, como personas icónicas del ambiente, tienen sus obras.
+                Entre
+                ellos:
+                Fernando Alonso, Lewis Hamilton, Sebastián Buelmi, Hijo de James Hunt, Marc Marquez,
+                Valentino
+                Rossi, Maverick Viñales, Teo Martín (CEO de MSI, Madrid-Piloto Rally), Instituto Ayrton
+                Senna,
+                Presidente
+                de Mercedes Benz F1, Alejandro Agag (Presidente de la F1), Daniel Herrero (Ex Presidente de
+                Toyota
+                Argentina).
+            </p>
+        </div>
+        <div>
+            <p>
+                Internacionalmente, también ha realizado acciones en vivo para:
+            </p>
+        </div>
+        <div>
+            <p>
+                - Museo "Juan Manuel Fangio" (Artista Oficial del Museo), ARGENTINA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - MotorSport Europa "Michelin" (Gran Premio de Aragón, MOTO GP), EUROPA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - TRACK DAY para: Ferrari, Porsche, SUPER TC 2000, Aniversario del Automovilismo, Formula E,
+                ARGENTINA.
+            </p>
+        </div>
+    </section>
+
+    <div class="imagenBiografia">
+        <img src="../img/daniela.jpg" alt="Daniela">
+    </div>
+
+    <p>
+        - Realización de Obras para Subastas (con fines solidarios).
+    </p>
+
+    <p>
+        - Subasta de Obra en el YndiCar para la fundación de Mario Andretti y Sam Smith.
+    </p>
+    <p>
+        - Subasta de una obra firmada por MESSI para la fundación pequeños pasos, MIAMI.
+    </p>
+    <p>
+        - Aniversario 20 años de la marca "PAGANI" en "Prestige Import", MIAMI.
+    </p>
+    <p>
+        - Presentación LAMBORGHINI EVO para "Prestige Import", MIAMI.
+    </p>
+    <p>
+        - Homenaje de los 20 años de "GONCHI", para su HNA "NANI RODRIGUEZ" y su Fundación, URUGUAY.
+    </p>
+    <p>
+        - Final MOTO GP para la marca "Yamaha", VALENCIA - ESPAÑA.
+    </p>
+    <p>
+        - Homenaje al Piloto "Ayrton Senna", en representación de su Instituto "Ayrton Senna" para
+        la F1,
+        BRASIL.
+    </p>
+    <p>
+        - MOTO GP junto a "Michelín", TERMAS DE RÍO HONDO - ARGENTINA.
+    </p>
+    <p>
+        - Diseño y decoración integral para "MSI" (Motor & Sport Institute), MADRID - ESPAÑA.
+    </p>
+    <p>
+        - TCR SOUTH AMERICA.
+    </p>
+    <p>
+        - Obras para edificio de "MT HELMETS" (Oficinas Centrales), CARTAGENA - ESPAÑA.
+    </p>
+    <p>
+        - Intervención de cascos para pilotos de MOTO 3 "DIOGO MOREIRA" 2022, VALENCIA - ESPAÑA.
+    </p>
+    </ul>
+    </div>
+
+    </div>
+    </div>
+
+    <strong>
+        </div>
+
+
+        <footer>
+            <h3 class="redesSociales">Redes Sociales</h3>
+            <a href="https://instagram.com/montesanodaniela?igshid=OGQ2MjdiOTE=" target="_blank"><img class="instagram"
+                    src="../img/instagram.jpg" alt="Instagram"></a>
+            <a href="https://twitter.com/danimontesano" target="_blank"><img class="twitter" src="../img/twitter.jpg"
+                    alt="Twitter"></a>
+            <a href="https://www.youtube.com/watch?v=agytR2SXg5M" target="_blank"><img class="youtube"
+                    src="../img/youtube.jpg" alt="YouTube"></a>
+            <h4 class="arriba" style="text-decoration:none"><a href="#header">ARRIBA</a></h4>
+            <div class="montesanoLogo">
+                <img class="logo" src="../img/montesanologo.jpg" alt="logo">
+            </div>
+        </footer>
+
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 
 
 
