--- a/pages/history.html
+++ b/pages/history.html
@@ -83,6 +83,11 @@
                 grandes premios de F1, Moto GP, Rallys, entre otros.
             </p>
         </div>
+    </section>
+    <div class="imagenBiografia2">
+        <img src="../img/fua.jpg" alt="Daniela">
+    </div>
+    <section>
         <div>
             <p>
                 Pilotos emblemáticos a nivel mundial, como personas icónicas del ambiente, tienen sus obras.
@@ -125,76 +130,95 @@
         <img src="../img/daniela.jpg" alt="Daniela">
     </div>
 
-    <p>
-        - Realización de Obras para Subastas (con fines solidarios).
-    </p>
-
-    <p>
-        - Subasta de Obra en el YndiCar para la fundación de Mario Andretti y Sam Smith.
-    </p>
-    <p>
-        - Subasta de una obra firmada por MESSI para la fundación pequeños pasos, MIAMI.
-    </p>
-    <p>
-        - Aniversario 20 años de la marca "PAGANI" en "Prestige Import", MIAMI.
-    </p>
-    <p>
-        - Presentación LAMBORGHINI EVO para "Prestige Import", MIAMI.
-    </p>
-    <p>
-        - Homenaje de los 20 años de "GONCHI", para su HNA "NANI RODRIGUEZ" y su Fundación, URUGUAY.
-    </p>
-    <p>
-        - Final MOTO GP para la marca "Yamaha", VALENCIA - ESPAÑA.
-    </p>
-    <p>
-        - Homenaje al Piloto "Ayrton Senna", en representación de su Instituto "Ayrton Senna" para
-        la F1,
-        BRASIL.
-    </p>
-    <p>
-        - MOTO GP junto a "Michelín", TERMAS DE RÍO HONDO - ARGENTINA.
-    </p>
-    <p>
-        - Diseño y decoración integral para "MSI" (Motor & Sport Institute), MADRID - ESPAÑA.
-    </p>
-    <p>
-        - TCR SOUTH AMERICA.
-    </p>
-    <p>
-        - Obras para edificio de "MT HELMETS" (Oficinas Centrales), CARTAGENA - ESPAÑA.
-    </p>
-    <p>
-        - Intervención de cascos para pilotos de MOTO 3 "DIOGO MOREIRA" 2022, VALENCIA - ESPAÑA.
-    </p>
-    </ul>
-    </div>
-
-    </div>
-    </div>
-
-    <strong>
+    <section class="biografiados">
+        <div>
+            <p>
+                - Realización de Obras para Subastas (con fines solidarios).
+            </p>
         </div>
+        <div>
+            <p>
+                - Subasta de Obra en el YndiCar para la fundación de Mario Andretti y Sam Smith.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Subasta de una obra firmada por MESSI para la fundación pequeños pasos, MIAMI.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Aniversario 20 años de la marca "PAGANI" en "Prestige Import", MIAMI.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Presentación LAMBORGHINI EVO para "Prestige Import", MIAMI.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Homenaje de los 20 años de "GONCHI", para su HNA "NANI RODRIGUEZ" y su Fundación, URUGUAY.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Final MOTO GP para la marca "Yamaha", VALENCIA - ESPAÑA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Homenaje al Piloto "Ayrton Senna", en representación de su Instituto "Ayrton Senna" para
+                la F1,
+                BRASIL.
+            </p>
+        </div>
+        <div>
+            <p>
+                - MOTO GP junto a "Michelín", TERMAS DE RÍO HONDO - ARGENTINA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Diseño y decoración integral para "MSI" (Motor & Sport Institute), MADRID - ESPAÑA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - TCR SOUTH AMERICA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Obras para edificio de "MT HELMETS" (Oficinas Centrales), CARTAGENA - ESPAÑA.
+            </p>
+        </div>
+        <div>
+            <p>
+                - Intervención de cascos para pilotos de MOTO 3 "DIOGO MOREIRA" 2022, VALENCIA - ESPAÑA.
+            </p>
+        </div>
+    </section>
 
 
-        <footer>
-            <h3 class="redesSociales">Redes Sociales</h3>
-            <a href="https://instagram.com/montesanodaniela?igshid=OGQ2MjdiOTE=" target="_blank"><img class="instagram"
-                    src="../img/instagram.jpg" alt="Instagram"></a>
-            <a href="https://twitter.com/danimontesano" target="_blank"><img class="twitter" src="../img/twitter.jpg"
-                    alt="Twitter"></a>
-            <a href="https://www.youtube.com/watch?v=agytR2SXg5M" target="_blank"><img class="youtube"
-                    src="../img/youtube.jpg" alt="YouTube"></a>
-            <h4 class="arriba" style="text-decoration:none"><a href="#header">ARRIBA</a></h4>
-            <div class="montesanoLogo">
-                <img class="logo" src="../img/montesanologo.jpg" alt="logo">
-            </div>
-        </footer>
+    <footer>
+        <h3 class="redesSociales">Redes Sociales</h3>
+        <a href="https://instagram.com/montesanodaniela?igshid=OGQ2MjdiOTE=" target="_blank"><img class="instagram"
+                src="../img/instagram.jpg" alt="Instagram"></a>
+        <a href="https://twitter.com/danimontesano" target="_blank"><img class="twitter" src="../img/twitter.jpg"
+                alt="Twitter"></a>
+        <a href="https://www.youtube.com/watch?v=agytR2SXg5M" target="_blank"><img class="youtube"
+                src="../img/youtube.jpg" alt="YouTube"></a>
+        <h4 class="arriba" style="text-decoration:none"><a href="#header">ARRIBA</a></h4>
+        <div class="montesanoLogo">
+            <img class="logo" src="../img/montesanologo.jpg" alt="logo">
+        </div>
+    </footer>
 
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 
 
