--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,35 +65,39 @@
 
     <section class="danielapintando">
 
-        <div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu nombre">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu apellido">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu teléfono">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Dirección</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Domicilio">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Enviar</button>
+        <div class="danielapintando2">
+            <div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu apellido">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu teléfono">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Dirección</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Domicilio">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">Enviar</button>
+                </div>
             </div>
         </div>
+
         <div>
             <img class="danipintando" src="../img/danipintando.jpg" alt="">
         </div>
