--- a/pages/history.html
+++ b/pages/history.html
@@ -200,6 +200,10 @@
         </div>
     </section>
 
+    <div>
+        <img class="ferrari" src="../img/ferrari.jpeg" alt="Ferrari">
+    </div>
+
 
     <footer>
         <h3 class="redesSociales">Redes Sociales</h3>
