--- a/pages/history.html
+++ b/pages/history.html
@@ -71,9 +71,9 @@
 
 
 
-    <section class="biografia">
+    <section>
         <div>
-            <p>
+            <p class="biografia">
                 Con su estilo caracteristico de cómics y arte pop, su estética y colores son los principales
                 protagonistas tomando imágenes icónicas e inmortalizandolas con su arte para así contar una
                 historia. Su
@@ -89,7 +89,7 @@
     </div>
     <section>
         <div>
-            <p>
+            <p class="biografia">
                 Pilotos emblemáticos a nivel mundial, como personas icónicas del ambiente, tienen sus obras.
                 Entre
                 ellos:
@@ -104,7 +104,7 @@
             </p>
         </div>
         <div>
-            <p>
+            <p class="biografiatres">
                 Internacionalmente, también ha realizado acciones en vivo para:
             </p>
         </div>
@@ -130,7 +130,7 @@
         <img src="../img/daniela.jpg" alt="Daniela">
     </div>
 
-    <section class="biografiados">
+    <section>
         <div>
             <p>
                 - Realización de Obras para Subastas (con fines solidarios).
