--- a/pages/art.html
+++ b/pages/art.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="../img/fanicos.jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-    <title>Daniela Montesano | Shop</title>
+    <title>Daniela Montesano</title>
 </head>
 
 
