--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/jpg" href="../img/fanicos.jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Daniela Montesano | Contacto</title>
+    <title>Daniela Montesano</title>
 
 <body>
     <main>
