--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="arte, pintura, senna, messi, art, montesano, corredores, f1">
-    <meta name="description" content="Estilo caracteristico de cómics y arte pop y colores son los principales protagonistas tomando imágenes icónicas e inmortalizandolas con su arte para así contar una historia. Su trabajo es mundialmente reconocido, destacado en el ambiente motorsport siendo una frecuente protagonista de grandes premios de F1, Moto GP, Rallys, entre otros.">
+    <meta name="description" content="Su trabajo es mundialmente reconocido, destacado en el ambiente motorsport siendo una frecuente protagonista de grandes premios de F1, Moto GP, Rallys, entre otros.">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="./img/fanicos.jpg">
     <link rel="stylesheet" href="./style/style.css">
